# Morphix

./: .dockerignore  .gitignore  LICENSE  NOTICE  README.es.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini
apps/api/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml  state_machine_definition.json
apps/api/scripts/: build_lambda.sh
apps/api/src/morphix_api/: aws_clients.py  formats.py  main.py  models.py  repository.py  security.py
apps/api/src/morphix_api/application/ports/: conversion_orchestrator.py  jobs_repository.py  object_url_service.py
apps/api/src/morphix_api/application/use_cases/: _shared.py  create_batch_jobs.py  create_job.py  delete_job.py  get_job.py  list_jobs.py  request_download_url.py  request_upload_url.py  start_conversion.py
apps/api/src/morphix_api/core/: config.py  time.py
apps/api/src/morphix_api/domain/: errors.py
apps/api/src/morphix_api/domain/entities/: job.py
apps/api/src/morphix_api/domain/policies/: conversion_policy.py  file_size_policy.py  ownership_policy.py
apps/api/src/morphix_api/domain/value_objects/: conversion_format.py  file_metadata.py  job_status.py
apps/api/src/morphix_api/realtime/: __init__.py  broadcaster.py  connection_handler.py  local_realtime.py
apps/api/tests/: test_api.py  test_api_architecture.py
apps/worker/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml
apps/worker/src/morphix_worker/: __main__.py  converters.py  main.py  models.py  repository.py  runner.py  storage.py
apps/worker/src/morphix_worker/application/pipeline/: run_conversion_job.py
apps/worker/src/morphix_worker/application/ports/: converter.py  converter_registry.py  jobs_repository.py  object_storage.py  workspace_manager.py
apps/worker/src/morphix_worker/converters/: common.py  registry.py
apps/worker/src/morphix_worker/converters/ffmpeg/: media_converter.py
apps/worker/src/morphix_worker/converters/imagemagick/: image_converter.py
apps/worker/src/morphix_worker/converters/libreoffice/: document_converter.py  document_to_pdf.py
apps/worker/src/morphix_worker/core/: config.py  logging.py  subprocess.py  workspace.py
apps/worker/src/morphix_worker/domain/: errors.py
apps/worker/src/morphix_worker/entrypoints/: ecs_task.py  queue_worker.py
apps/worker/tests/: test_converters.py  test_dynamodb_repository.py  test_runner.py  test_worker_architecture.py
docs/: prd-coverage.md
(+166 files in other folders)
