[project]
name = "morphix-python"
version = "0.1.0"
description = "Python workspace for Morphix API and worker."
requires-python = ">=3.11"
dependencies = [
  "morphix-api",
  "morphix-worker"
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "apps/api",
  "apps/worker"
]

[tool.uv.sources]
morphix-api = { workspace = true }
morphix-worker = { workspace = true }

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0"
]
