[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morphix-worker"
version = "0.1.0"
description = "Dockerized conversion worker for Morphix."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Daniel Santiago Acosta", email = "santiagoacosta1013@gmail.com" },
]
dependencies = [
  "boto3>=1.35.0",
  "openpyxl>=3.1.5",
  "pdf2docx>=0.5.8",
  "pymupdf>=1.24.0",
  "python-pptx>=1.0.0",
  "redis>=5.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
